# self-driving-simulation

./: .gitignore  CMakeLists.txt  Makefile
include/diagnostics/: diag.h  logging.h
include/hardware/: button.h  hardware.h  motor.h  pi_emulator.h  raspi.h  sensor.h
include/logging/: logging.h
include/objects/: objects.h
include/simulation/: car.h  grid.h  intersection.h
include/system/: system.h  threading.h  time.h
include/testing/: testing.h
src/: CMakeLists.txt
src/config/: config.h.in
src/hardware/: button.cpp  motor.cpp  raspi.cpp  sensor.cpp
src/hardware/test/: test_button.cpp  test_motor.cpp  test_motor_simple.cpp  test_oscilloscope.cpp  test_sensor.cpp
src/objects/: objects.cpp  objects_impl.h
src/objects/test/: test_grid.cpp  test_objects.cpp
src/simulation/: car.cpp  grid.cpp  intersection.cpp
src/simulation/test/: test_grid.cpp
src/system/: threading.cpp
src/testing/: test.cpp
test/: CMakeLists.txt  test.cpp
test/hardware/: test_button.cpp  test_motor.cpp  test_motor_simple.cpp  test_oscilloscope.cpp  test_sensor.cpp
test/include/: testing.h  widget.h
test/objects/: test_objects.cpp  widget.cpp
test/simulation/: test_grid.cpp
test/system/: test_threading.cpp
